# frida

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
docs/: PROJECT_FRIDA_CONFIDENTIAL.md  REPLICA_MODULE.md
logs/: drive_info.json
src/: agent_tasks.rs  constants.rs  crawler.rs  device_monitor.rs  drives.rs  file_scanner.rs  geolocation.rs  injector.rs  keylogger.rs  lib.rs  log.rs  main.rs  network.rs  network_stealth.rs  paths.rs  replica.rs  screen_capture.rs  writer.rs
src/drives/: tests.rs
tests/: mod.rs  screen_capture_test.rs
tests/common/: mod.rs
tests/integration/: mod.rs  system_monitoring_test.rs
tests/mocks/: device_monitor_mock.rs  drives_mock.rs  mod.rs
tests/security/: mod.rs  security_tests.rs
