[package]
name = "frida_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.30"
rdev = "0.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rusb = "0.9"
log = "0.4"
chrono = "0.4"
