[package]
name = "frida_rust"
version = "0.1.0"
edition = "2021"

# Define test categories as feature flags
[features]
unit-tests = []
integration-tests = []
security-tests = []

[dependencies]
sysinfo = "0.30"
rdev = "0.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rusb = "0.9"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
screenshots = "0.8.4"    # For screen capture functionality
image = { version = "0.24", features = ["webp", "jpeg"] }  # For image processing and compression
webp = "0.2"          # For WebP format support (higher compression)
iplocate = "0.1.0"      # For IP-based geolocation
public-ip = "0.2.2"     # For detecting public IP address
once_cell = "1.18.0"    # For lazy static initialization
async-trait = "0.1.73"  # For async traits
dirs = "5.0.1"          # For home directory access
uuid = { version = "1.8.0", features = ["v4", "serde"] } # For unique ID generation
rand = "0.8.5"            # For random number generation

[dev-dependencies]
mockall = "0.11.3"           # For creating mock objects
rstest = "0.16.0"            # For parameterized tests and fixtures
insta = "1.26.0"             # For snapshot testing
tempfile = "3.3.0"           # For temporary test directories
tokio-test = "0.4.2"         # For testing async code
serial_test = "0.10.0"       # For tests that can't run in parallel

# Windows-specific dependencies for process injection
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "memoryapi", "winnt", "libloaderapi", "tlhelp32"] }
